add_subdirectory(image)
add_subdirectory(texture)
add_subdirectory(plot)
add_subdirectory(hdraw)
add_subdirectory(ydraw)
add_subdirectory(kdraw)
add_subdirectory(jdraw)
add_subdirectory(ydraw-zoo)
add_subdirectory(ytext)
add_subdirectory(ymery)
add_subdirectory(markdown)
add_subdirectory(qrcode)

add_subdirectory(thorvg)

add_subdirectory(python)

option(YETTY_CARD_PDF "Build PDF card (requires PDFium)" OFF)
if(YETTY_CARD_PDF)
    add_subdirectory(pdf)
endif()

option(YETTY_CARD_YPDF "Build YPdf card (vector PDF via pdfio)" ON)
if(YETTY_CARD_YPDF)
    add_subdirectory(ypdf)
endif()

option(YETTY_CARD_YHTML "Build YHtml card (HTML/CSS via litehtml)" ON)
if(YETTY_CARD_YHTML)
    add_subdirectory(yhtml)
endif()
